--- a/server/Gemfile
+++ b/server/Gemfile
@@ -4,3 +4,8 @@ ruby '2.6.3'
 
 gem 'sinatra'
 gem 'sinatra-cross_origin'
+gem 'activerecord'
+gem 'sinatra-activerecord'
+gem 'mysql2'
+gem 'rake'
+gem 'faker', git: 'https://github.com/faker-ruby/faker.git', branch: 'master'
